--- a/Confetti Effect Using Javascript/style.css
+++ b/Confetti Effect Using Javascript/style.css
@@ -1,16 +1,15 @@
-.confetti{
+.image-fragment {
     position: absolute;
-    border-radius: 50%;
     pointer-events: none;
 }
 
 @keyframes burst {
     0% {
-        transform: translate(0, 0);
+        transform: translate(0, 0) scale(1);
         opacity: 1;
     }
     100% {
-      transform: translate(var(--x), var(--y));
-      opacity: 0;
+        transform: translate(var(--x), var(--y)) scale(0);
+        opacity: 0;
     }
 }
